migrate build to plugins 6.0.1